trunk/Archive2/66/324d1cbd4985bf/output
main.cpp: In function 'int main()':
main.cpp:3:6: error: 'pi' was not declared in this scope
     &pi;
      ^
